[package]
name = "pingap"
version = "0.11.1"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["proxy", "http", "gateway"]
description = "A reverse proxy like nginx"
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
exclude = ["asset/*", "test/*", "Cargo.lock", "web/*", ".github/*", "docs/*"]
readme = "./README.md"
rust-version = "1.82"
default-run = "pingap"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
clap = { version = "4.5.40", features = [
    "derive",
    "std",
    "help",
    "usage",
], default-features = false }
ctor = { workspace = true }
crc32fast = { workspace = true }
crossbeam-channel = "0.5.15"
flate2 = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
itoa = { workspace = true }
nanoid = { workspace = true }
nix = { version = "0.29.0", features = ["signal"] }
num_cpus = { workspace = true }
once_cell = { workspace = true }
pingap-acme = { version = "0.11.0", path = "pingap-acme" }
pingap-cache = { version = "0.11.0", path = "pingap-cache" }
pingap-certificate = { version = "0.11.0", path = "pingap-certificate" }
pingap-config = { version = "0.11.0", path = "pingap-config" }
pingap-core = { version = "0.11.0", path = "pingap-core" }
pingap-imageoptim = { version = "0.11.0", path = "pingap-imageoptim", optional = true }
pingap-location = { version = "0.11.0", path = "pingap-location" }
pingap-logger = { version = "0.11.0", path = "pingap-logger" }
pingap-otel = { version = "0.11.0", path = "pingap-otel", optional = true }
pingap-performance = { version = "0.11.0", path = "pingap-performance" }
pingap-plugin = { version = "0.11.0", path = "pingap-plugin" }
pingap-pyroscope = { version = "0.11.0", path = "pingap-pyroscope", optional = true }
pingap-sentry = { version = "0.11.0", path = "pingap-sentry", optional = true }
pingap-upstream = { version = "0.11.0", path = "pingap-upstream" }
pingap-util = { version = "0.11.0", path = "pingap-util" }
pingap-webhook = { version = "0.11.0", path = "pingap-webhook" }
pingora = { git = "https://github.com/cloudflare/pingora", rev = "13484892891eae7d4e9a49298e3683c3cab44d10", default-features = false, features = [
    # pingora = { version = "0.5.0", default-features = false, features = [
    "lb",
    "openssl",
    "cache",
] }
regex = { workspace = true }
rust-embed = { version = "8.7.2", features = [
    "mime-guess",
    "compression",
], default-features = false }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.10.9", default-features = false }
snafu = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.46"

[features]
pyro = ["pingap-pyroscope"]
imageoptim = ["pingap-imageoptim"]
tracing = [
    "pingora/sentry",
    "pingap-cache/tracing",
    "pingap-core/tracing",
    "pingap-performance/tracing",
    "pingap-otel",
    "pingap-sentry",
]
full = ["tracing", "imageoptim"]
perf = ["pyro", "full"]
default = []


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"


[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"

[profile.release-perf]
inherits = "release"
debug = 1
strip = "none"


[[bench]]
name = "bench"
harness = false

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[workspace]
members = [
    "pingap-acme",
    "pingap-cache",
    "pingap-certificate",
    "pingap-config",
    "pingap-core",
    "pingap-discovery",
    "pingap-health",
    "pingap-imageoptim",
    "pingap-location",
    "pingap-logger",
    "pingap-otel",
    "pingap-performance",
    "pingap-plugin",
    "pingap-pyroscope",
    "pingap-sentry",
    "pingap-upstream",
    "pingap-util",
    "pingap-webhook",
]
[workspace.dependencies]
ahash = { version = "0.8.12", default-features = false }
arc-swap = "1.7.1"
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
bytesize = { version = "2.0.1", features = ["serde"] }
cfg-if = "1.0.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
] }
cookie = "0.18.1"
crc32fast = "1.4.2"
ctor = "0.4.2"
derive_more = { version = "2.0.1", default-features = false, features = [
    "debug",
] }
dirs = "6.0.0"
flate2 = "1.1.2"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
http = "1.3.1"
humantime = "2.2.0"
humantime-serde = "1.1.1"
itoa = "1.0.15"
memory-stats = { version = "1.2.0", features = ["always_use_statm"] }
mime_guess = "2.0.5"
nanoid = "0.4.0"
num_cpus = "1.17.0"
once_cell = "1.21.3"
path-absolutize = "3.1.1"
pingora = { git = "https://github.com/cloudflare/pingora", rev = "13484892891eae7d4e9a49298e3683c3cab44d10", default-features = false, features = [
    # pingora = { version = "0.5.0", default-features = false, features = [
    "lb",
    "openssl",
    "cache",
] }
pingora-runtime = "0.5.0"
regex = { version = "1.11.1", default-features = false }
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "default-tls",
] }
scopeguard = "1.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
snafu = { version = "0.8.6", features = ["std"], default-features = false }
strum = { version = "0.27.1", features = ["derive"] }
substring = "1.4.5"
sysinfo = { version = "0.34.2", features = [
    "system",
], default-features = false }
tempfile = "3.16.0"
time = { version = "0.3.41", features = ["local-offset"] }
tokio = { version = "1.46.0", default-features = false, features = ["fs"] }
toml = "0.8.23"
tracing = "0.1.41"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = [
    "v7",
    "std",
    "fast-rng",
], default-features = false }
walkdir = "2.5.0"
