[package]
name = "pingap"
version = "0.12.8"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2024"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["proxy", "http", "gateway"]
description = "A reverse proxy like nginx"
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
exclude = ["asset/*", "test/*", "Cargo.lock", "web/*", ".github/*", "docs/*"]
readme = "./README.md"
rust-version = "1.85"
default-run = "pingap"
build = "build.rs"

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
clap = { version = "4.5.48", features = [
    "derive",
    "std",
    "help",
    "usage",
], default-features = false }
ctor = { workspace = true }
crc32fast = { workspace = true }
crossbeam-channel = "0.5.15"
flate2 = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
nanoid = { workspace = true }
nix = { version = "0.30.1", features = ["signal"] }
pingap-acme = { version = "0.12.0", path = "pingap-acme" }
pingap-cache = { version = "0.12.0", path = "pingap-cache" }
pingap-certificate = { version = "0.12.0", path = "pingap-certificate" }
pingap-config = { version = "0.12.0", path = "pingap-config" }
pingap-core = { version = "0.12.0", path = "pingap-core" }
pingap-imageoptim = { version = "0.12.0", path = "pingap-imageoptim", optional = true }
pingap-location = { version = "0.12.0", path = "pingap-location" }
pingap-logger = { version = "0.12.0", path = "pingap-logger" }
pingap-otel = { version = "0.12.0", path = "pingap-otel", optional = true }
pingap-performance = { version = "0.12.0", path = "pingap-performance" }
pingap-plugin = { version = "0.12.0", path = "pingap-plugin" }
pingap-proxy = { version = "0.12.0", path = "pingap-proxy" }
pingap-pyroscope = { version = "0.12.0", path = "pingap-pyroscope", optional = true }
pingap-sentry = { version = "0.12.0", path = "pingap-sentry", optional = true }
pingap-upstream = { version = "0.12.0", path = "pingap-upstream" }
pingap-util = { version = "0.12.0", path = "pingap-util" }
pingap-webhook = { version = "0.12.0", path = "pingap-webhook" }
pingora = { workspace = true }
regex = { workspace = true }
rust-embed = { version = "8.7.2", features = [
    "mime-guess",
    "compression",
], default-features = false }
serde_qs = { workspace = true }
sysinfo = { workspace = true }
# TODO remove it after using edition 2024
include-flate = "=0.3.0"
# #TODO END

serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }
vergen-git2 = "1.0.7"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.47"

[features]
pyro = ["pingap-pyroscope"]
imageoptim = ["pingap-imageoptim"]
tracing = [
    "pingora/sentry",
    "pingap-cache/tracing",
    "pingap-core/tracing",
    "pingap-performance/tracing",
    "pingap-proxy/tracing",
    "pingap-otel",
    "pingap-sentry",
]
full = ["tracing", "imageoptim"]
perf = ["pyro", "full"]
default = []


[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"
tempfile = { workspace = true }


[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.release-perf]
inherits = "release"
debug = 1
strip = "none"


[[bench]]
name = "bench"
harness = false

[package.metadata.cargo-machete]
ignored = ["humantime-serde", "include-flate"]

[workspace]
members = [
    "pingap-acme",
    "pingap-cache",
    "pingap-certificate",
    "pingap-config",
    "pingap-core",
    "pingap-discovery",
    "pingap-health",
    "pingap-imageoptim",
    "pingap-location",
    "pingap-logger",
    "pingap-otel",
    "pingap-performance",
    "pingap-plugin",
    "pingap-proxy",
    "pingap-pyroscope",
    "pingap-sentry",
    "pingap-upstream",
    "pingap-util",
    "pingap-webhook",
]
[workspace.dependencies]
aes-gcm-siv = { version = "0.11.1", default-features = false, features = [
    "aes",
    "alloc",
] }
ahash = "0.8.12"
arc-swap = "1.7.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
bytesize = { version = "2.1.0", features = ["serde"] }
bollard = "0.19.3"
bstr = "1.12.0"
dashmap = "6.1.0"
cfg-if = "1.0.3"
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "clock",
] }
coarsetime = "0.1.36"
cookie = "0.18.1"
crc32fast = "1.5.0"
ctor = "0.6.0"
derive_more = { version = "2.0.1", default-features = false, features = [
    "debug",
] }
diff = "0.1.13"
dirs = "6.0.0"
etcd-client = "0.17.0"
fancy-regex = "0.16.2"
flate2 = "1.1.4"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.3"
hex = "0.4.3"
hickory-resolver = "0.25.1"
http = "1.3.1"
hmac = "0.12.1"
hmac-sha256 = "1.1.12"
hmac-sha512 = { version = "1.1.7", default-features = false }
hostname = "0.4.1"
humantime = "2.3.0"
humantime-serde = "1.1.1"
instant-acme = "0.8.2"
ipnet = "2.11.0"
itoa = "1.0.15"
local-ip-address = "0.6.5"
memory-stats = { version = "1.2.0", features = ["always_use_statm"] }
mime_guess = "2.0.5"
nanoid = "0.4.0"
num_cpus = "1.17.0"
opentelemetry = { version = "0.30.0", default-features = false, features = [
    "trace",
] }
opentelemetry-http = { version = "0.30.0", default-features = false }
opentelemetry-jaeger-propagator = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = [
    "grpc-tonic",
    "trace",
] }
opentelemetry_sdk = { version = "0.30.0", features = [
    "rt-tokio",
], default-features = false }
path-absolutize = "3.1.1"
pingora = { version = "0.7.0", default-features = false, features = [
    "lb",
    "openssl",
    "cache",
] }
pingora-limits = "0.6.0"
pingora-runtime = "0.6.0"
pem = "3.0.5"
prometheus = { version = "0.13.4", default-features = false }
rand = "0.9.2"
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
regex = { version = "1.11.3", default-features = false }
reqwest = { version = "0.13.1", default-features = false, features = [
    "query",
    "json",
    "default-tls",
] }
rustls = "0.23.32"
rustls-pki-types = "1.13.2"
rustc_version_runtime = "0.3.0"
scopeguard = "1.2.0"
sentry-core = { version = "0.36.0", default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
serde_qs = "0.15.0"
smallvec = "1.13.2"
snafu = { version = "0.8.9", features = ["std"], default-features = false }
sha1 = "0.10.6"
sha2 = { version = "0.10.9", default-features = false }
strum = { version = "0.27.2", features = ["derive"] }
substring = "1.4.5"
sysinfo = { version = "0.36.1", features = [
    "system",
], default-features = false }
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["local-offset"] }
TinyUFO = "0.6.0"
tldextract = "0.6.0"
tokio = { version = "1.47.1", default-features = false, features = ["fs"] }
toml = "0.9.7"
tonic = "0.14.2"
tonic-health = "0.14.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [
    "local-time",
    "json",
    "fmt",
    "ansi",
    "env-filter",
], default-features = false }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = [
    "v7",
    "std",
    "fast-rng",
], default-features = false }
walkdir = "2.5.0"
x509-parser = "0.18.0"
zstd = "0.13.3"
