[package]
name = "pingap"
version = "0.13.4"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2024"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["proxy", "http", "gateway"]
description = "A reverse proxy like nginx"
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
exclude = ["asset/*", "test/*", "Cargo.lock", "web/*", ".github/*", "docs/*"]
readme = "./README.md"
rust-version = "1.88"
default-run = "pingap"
build = "build.rs"

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
clap = { version = "4.6.1", features = [
    "derive",
    "std",
    "help",
    "usage",
], default-features = false }
ctor = { workspace = true }
crc32fast = { workspace = true }
crossbeam-channel = "0.5.15"
flate2 = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
nanoid = { workspace = true }
nix = { version = "0.31.3", features = ["signal"] }
pingap-acme = { version = "0.13.1", path = "pingap-acme" }
pingap-cache = { version = "0.13.1", path = "pingap-cache" }
pingap-certificate = { version = "0.13.1", path = "pingap-certificate" }
pingap-config = { version = "0.13.1", path = "pingap-config" }
pingap-core = { version = "0.13.1", path = "pingap-core" }
pingap-imageoptim = { version = "0.13.1", path = "pingap-imageoptim", optional = true }
pingap-location = { version = "0.13.1", path = "pingap-location" }
pingap-logger = { version = "0.13.1", path = "pingap-logger" }
pingap-otel = { version = "0.13.1", path = "pingap-otel", optional = true }
pingap-performance = { version = "0.13.1", path = "pingap-performance" }
pingap-plugin = { version = "0.13.1", path = "pingap-plugin" }
pingap-proxy = { version = "0.13.1", path = "pingap-proxy" }
pingap-pyroscope = { version = "0.13.1", path = "pingap-pyroscope", optional = true }
pingap-sentry = { version = "0.13.1", path = "pingap-sentry", optional = true }
pingap-upstream = { version = "0.13.1", path = "pingap-upstream" }
pingap-util = { version = "0.13.1", path = "pingap-util" }
pingap-webhook = { version = "0.13.1", path = "pingap-webhook" }
pingora = { workspace = true }
regex = { workspace = true }
rust-embed = { version = "8.11.0", features = [
    "mime-guess",
    "compression",
], default-features = false }
serde_qs = { workspace = true }
sysinfo = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
kdl = { workspace = true }

[build-dependencies]
vergen = { version = "9.1.0", features = ["build"] }
vergen-git2 = "9.1.0"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.47"

[features]
pyro = ["pingap-pyroscope"]
imageoptim = ["pingap-imageoptim"]
tracing = [
    "pingora/sentry",
    "pingap-cache/tracing",
    "pingap-core/tracing",
    "pingap-performance/tracing",
    "pingap-proxy/tracing",
    "pingap-otel",
    "pingap-sentry",
]
full = ["tracing", "imageoptim"]
perf = ["pyro", "full"]
default = []


[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"
tempfile = { workspace = true }


[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.release-perf]
inherits = "release"
debug = 1
strip = "none"


[[bench]]
name = "bench"
harness = false

[package.metadata.cargo-machete]
ignored = ["humantime-serde", "hcl-rs", "kdl"]

[workspace]
members = [
    "pingap-acme",
    "pingap-cache",
    "pingap-certificate",
    "pingap-config",
    "pingap-core",
    "pingap-discovery",
    "pingap-health",
    "pingap-imageoptim",
    "pingap-location",
    "pingap-logger",
    "pingap-otel",
    "pingap-performance",
    "pingap-plugin",
    "pingap-proxy",
    "pingap-pyroscope",
    "pingap-sentry",
    "pingap-upstream",
    "pingap-util",
    "pingap-webhook",
]
[workspace.dependencies]
aes-gcm-siv = { version = "0.11.1", default-features = false, features = [
    "aes",
    "alloc",
] }
ahash = "0.8.12"
arc-swap = "1.9.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
bytesize = { version = "2.3.1", features = ["serde"] }
bollard = "0.21.0"
bstr = "1.12.1"
dashmap = "6.2.1"
cfg-if = "1.0.4"
chrono = { version = "0.4.45", default-features = false, features = [
    "std",
    "clock",
] }
coarsetime = "0.1.37"
cookie = "0.18.1"
crc32fast = "1.5.0"
ctor = "1.0.7"
derive_more = { version = "2.1.1", default-features = false, features = [
    "debug",
] }
diff = "0.1.13"
dirs = "6.0.0"
etcd-client = "0.19.0"
fancy-regex = "0.18.0"
flate2 = "1.1.9"
futures = "0.3.32"
futures-util = "0.3.32"
glob = "0.3.3"
hex = "0.4.3"
hickory-resolver = "0.26.1"
http = "1.4.2"
hmac = "0.13.0"
hmac-sha256 = "1.1.14"
hmac-sha512 = { version = "1.1.12", default-features = false }
hostname = "0.4.2"
humantime = "2.3.0"
humantime-serde = "1.1.1"
instant-acme = "0.8.5"
ipnet = "2.12.0"
itoa = "1.0.18"
local-ip-address = "0.6.13"
memory-stats = { version = "1.2.0", features = ["always_use_statm"] }
mime_guess = "2.0.5"
nanoid = "0.5.0"
num_cpus = "1.17.0"
opentelemetry = { version = "0.32.0", default-features = false, features = [
    "trace",
] }
opentelemetry-http = { version = "0.32.0", default-features = false }
opentelemetry-jaeger-propagator = { version = "0.32.0" }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = [
    "grpc-tonic",
    "trace",
] }
opentelemetry_sdk = { version = "0.32.1", features = [
    "rt-tokio",
], default-features = false }
path-absolutize = "3.1.1"
pingora = { version = "0.8.1", default-features = false, features = [
    "lb",
    "openssl",
    "cache",
] }
pingora-limits = "0.8.1"
pingora-runtime = "0.8.1"
pem = "3.0.6"
prometheus = { version = "0.14.0", default-features = false }
rand = "0.10.1"
rcgen = { version = "0.14.8", features = ["pem", "x509-parser"] }
regex = { version = "1.12.4", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = [
    "query",
    "json",
    "default-tls",
] }
rustls = "0.23.40"
rustls-pki-types = "1.14.1"
rustc_version_runtime = "0.3.0"
scopeguard = "1.2.0"
sentry-core = { version = "0.36.0", default-features = false }
serde = "1.0.228"
serde_json = "1.0.150"
serde_qs = "1.1.2"
smallvec = "1.13.2"
snafu = { version = "0.9.1", features = ["std"], default-features = false }
sha1 = "0.11.0"
sha2 = { version = "0.11.0", default-features = false }
strum = { version = "0.28.0", features = ["derive"] }
substring = "1.4.5"
sysinfo = { version = "0.38.4", features = [
    "system",
], default-features = false }
tempfile = "3.27.0"
time = { version = "0.3.47", features = ["local-offset"] }
TinyUFO = "0.8.1"
tldextract = "0.6.0"
tokio = { version = "1.52.3", default-features = false, features = ["fs"] }
toml = "1.1.2"
hcl-rs = "0.19"
kdl = "6.5.0"
tonic = "0.14.6"
tonic-health = "0.14.6"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = [
    "local-time",
    "json",
    "fmt",
    "ansi",
    "env-filter",
], default-features = false }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.3", features = [
    "v7",
    "std",
    "fast-rng",
], default-features = false }
walkdir = "2.5.0"
x509-parser = "0.18.1"
zstd = "0.13.3"
