[package]
name = "pingap-acme"
version = "0.11.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "acme"]
description = "ACME client for pingap"


[lib]
name = "pingap_acme"
path = "src/lib.rs"

[dependencies]
instant-acme = "0.8.2"
pingap-certificate = { version = "0.11.0", path = "../pingap-certificate" }
pingap-config = { version = "0.11.0", path = "../pingap-config" }
pingap-core = { version = "0.11.0", path = "../pingap-core" }
pingora = { workspace = true }
rustls = "0.23.29"
snafu = { workspace = true }
substring = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.16.0"
tokio-test = "0.4.4"
