[package]
name = "pingap-acme"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "acme"]
description = "ACME client for pingap"


[lib]
name = "pingap_acme"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
hmac = { workspace = true }
instant-acme = "0.8.2"
nanoid = { workspace = true }
pingap-certificate = { version = "0.12.0", path = "../pingap-certificate" }
pingap-config = { version = "0.12.0", path = "../pingap-config" }
pingap-core = { version = "0.12.0", path = "../pingap-core" }
pingora = { workspace = true }
reqwest = { workspace = true }
rustls = "0.23.31"
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.21.0"
tokio-test = "0.4.4"
