[package]
name = "pingap-acme"
version = "0.13.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "acme"]
description = "ACME client for pingap"


[lib]
name = "pingap_acme"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
hmac = { workspace = true }
instant-acme = { workspace = true }
nanoid = { workspace = true }
pingap-certificate = { version = "0.13.0", path = "../pingap-certificate" }
pingap-config = { version = "0.13.0", path = "../pingap-config" }
pingap-core = { version = "0.13.0", path = "../pingap-core" }
pingora = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tldextract = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.21.0"
tokio-test = "0.4.4"

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"
