[package]
name = "pingap-cache"
version = "0.11.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "cache"]
description = "Cache for pingap"


[lib]
name = "pingap_cache"
path = "src/lib.rs"

[features]
tracing = ["prometheus"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
dirs = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
memory-stats = { workspace = true }
once_cell = { workspace = true }
path-absolutize = { workspace = true }
pingap-core = { version = "0.11.0", path = "../pingap-core" }
pingora = { workspace = true }
prometheus = { version = "0.13.4", default-features = false, optional = true }
scopeguard = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.16.0"
tokio-test = "0.4.4"
