[package]
name = "pingap-certificate"
version = "0.10.5"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "certificate"]

[lib]
name = "pingap_certificate"
path = "src/lib.rs"

[dependencies]
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
x509-parser = "0.17.0"
async-trait = { workspace = true }
pingora = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
regex = { workspace = true }
ahash = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
pingap-util = { version = "0.10.5", path = "../pingap-util" }
pingap-config = { version = "0.10.5", path = "../pingap-config" }
pingap-core = { version = "0.10.5", path = "../pingap-core" }


[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.16.0"
tokio-test = "0.4.4"
nanoid = "0.4.0"
