[package]
name = "pingap-certificate"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "certificate"]
description = "Certificate for pingap"

[lib]
name = "pingap_certificate"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
pingap-config = { version = "0.12.0", path = "../pingap-config" }
pingap-core = { version = "0.12.0", path = "../pingap-core" }
pingap-util = { version = "0.12.0", path = "../pingap-util" }
pingora = { workspace = true }
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
regex = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
x509-parser = "0.17.0"


[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.16.0"
tokio-test = "0.4.4"
nanoid = "0.4.0"
