[package]
name = "pingap-certificate"
version = "0.13.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "certificate"]
description = "Certificate for pingap"

[lib]
name = "pingap_certificate"
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
pingap-config = { version = "0.13.0", path = "../pingap-config" }
pingap-core = { version = "0.13.0", path = "../pingap-core" }
pingap-util = { version = "0.13.0", path = "../pingap-util" }
pingora = { workspace = true }
rcgen = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
x509-parser = { workspace = true }


[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.21.0"
tokio-test = "0.4.4"
nanoid = "0.4.0"

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"
