[package]
name = "pingap-config"
version = "0.10.3"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "config"]


[lib]
name = "pingap_config"
path = "src/lib.rs"


[dependencies]
async-trait = { workspace = true }
etcd-client = "0.14.1"
glob = "0.3.2"
crc32fast = "1.4.2"
rustls-pemfile = "2.2.0"
diff = "0.1.13"
tempfile = "3.16.0"
arc-swap = { workspace = true }
bytesize = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
strum = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
substring = { workspace = true }
futures-util = { workspace = true }
snafu = { workspace = true }
base64 = { workspace = true }
pingap-discovery = { version = "0.10.3", path = "../pingap-discovery" }
pingap-util = { version = "0.10.3", path = "../pingap-util" }
pingap-core = { version = "0.10.3", path = "../pingap-core" }


[package.metadata.cargo-machete]
ignored = ["humantime-serde"]


[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.4"
nanoid = "0.4.0"
