[package]
name = "pingap-core"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "core"]
description = "Core for pingap"

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
hostname = "0.4.1"
http = { workspace = true }
itoa = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { version = "0.28.0", default-features = false, features = [
    "trace",
], optional = true }
pingora = { workspace = true }
pingora-limits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
TinyUFO = "0.6.0"
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }


[features]
tracing = ["opentelemetry"]

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.16.0"
tokio-test = "0.4.4"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
