[package]
name = "pingap-discovery"
version = "0.10.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "discovery"]


[lib]
name = "pingap_discovery"
path = "src/lib.rs"


[dependencies]
pingora = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
hickory-resolver = "0.24.3"
bollard = "0.18.1"
snafu = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
pingap-core = { version = "0.10.0", path = "../pingap-core" }
pingap-webhook = { version = "0.10.0", path = "../pingap-webhook" }

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.16.0"
tokio-test = "0.4.4"
